--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Randall Taylor",
+  "author": "rhtaylor",
   "license": "ISC", 
   "homepage": "https://github.com/rhtaylor/Portfolio",
   "dependencies": {
